fixed overflow

--- a/style.css
+++ b/style.css
@@ -160,6 +160,10 @@
             .container-2 {
                 height: 200px;
             }
+            .container-1 {
+                padding-right: 0px;
+                padding-left: 0px;
+            }
         }
         
         @media screen and (max-width: 768px) and (min-width: 450px) {
